# Introduction-to-Rust-Programming-

./: README.md
Codes/Section 2/Documents/: slides.odp  slides.pptx
Codes/Section 2/Source Code/v1_hello/: Cargo.toml
Codes/Section 2/Source Code/v1_hello/src/: main.rs
Codes/Section 2/Source Code/v234_structs/: Cargo.toml
Codes/Section 2/Source Code/v234_structs/src/: main.rs
Codes/Section 2/Source Code/v5_loops/: Cargo.toml
Codes/Section 2/Source Code/v5_loops/src/: main.rs
Codes/Section 2/Source Code/v6_generics/: Cargo.toml
Codes/Section 2/Source Code/v6_generics/src/: lib.rs
Codes/Section 2/Source Code/v7_result/: Cargo.toml
Codes/Section 2/Source Code/v7_result/src/: main.rs
Codes/Section 3/Code/v1_matter/: Cargo.toml
Codes/Section 3/Code/v2-passing/: Cargo.toml
Codes/Section 3/Code/v3-box/: Cargo.toml
Codes/Section 3/Code/v4-str/: Cargo.toml
Codes/Section 3/Code/v5-array/: Cargo.toml
Codes/Section 3/Code/v6-refcounter/: Cargo.toml
Codes/Section 3/Documents/: .~lock.slides2.pptx#  slides2.pptx
Codes/Section 4/Code/v1_trait/: Cargo.toml
Codes/Section 4/Code/v2_newtype/: Cargo.toml
Codes/Section 4/Code/v3_poly/: Cargo.toml
Codes/Section 4/Code/v4_mod/: Cargo.toml
Codes/Section 4/Code/v4_mod/src/: line.rs  main.rs
Codes/Section 4/Code/v4_mod/src/hello/: mod.rs
Codes/Section 4/Code/v5_errors/: Cargo.toml
Codes/Section 4/Code/v6_serde/: Cargo.toml
Codes/Section 4/Code/v6_serde/src/: main.rs
Codes/Section 4/Code/v6_serde/test_data/: pp1.json
Codes/Section 4/Documents/: slides3.pptx
(+13 files in other folders)
