[package]
name = "v4_mod"
version = "0.1.0"
authors = ["matthew <matt@storyfeet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

v6_generics_do_not_use = {path="../../d1_syntax/v6_generics/"}
#v6_generics_do_not_use = "0.1.0"
#v6_generics = {git="https://..."}
