[package]
name = "v6_serde"
version = "0.1.0"
authors = ["matthew <matt@storyfeet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.114"
serde_derive="1.0.114"
serde_json ="1.0.56"
toml = "0.5.6"
anyhow="1.0.31"
